Fix spacing in cart styles

--- a/resources/sass/_carts.scss
+++ b/resources/sass/_carts.scss
@@ -1,4 +1,3 @@
-
 .cartItems {
     display: grid;
     // grid-template-rows: repeat(auto-fill, minmax(40px, .5fr));
@@ -8,11 +7,11 @@
 .cartItem {
     display: grid;
     grid-template-columns: 30% 30% 20% 20%;
-    padding-bottom: 25px;
+    padding: 15px 0;
     width: 100%;
     border-bottom: 1px solid #000000;
     img {
-        width: 50%;
+        width: 33.333%;
     }
     .name {
         padding-left: 25px;
